ajuste envio archivos